--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   Trivia Facts: UNESCO recognizes January the 16th as World Beatles Day. Eric Clapton was almost welcomed as the fifth Beatle. Each member of the band and the band itself have an asteroid named after them. Paul McCartney is still releasing music and getting millions of views on YouTube!<br>
   <br>
   <button class="btn"
-          onclick="window.open('beatles.html', '_parent')">go to band page</button>
+          onclick="window.open('Beatles.html', '_parent')">go to band page</button>
   </div>
   </div>
 
